fix(panel): expand popup window at scrollable container on iOS (#2737)

--- a/src/pages/panel/styles.css
+++ b/src/pages/panel/styles.css
@@ -23,3 +23,9 @@ body[platform-name='ios'] {
     max-height: 600px;
   }
 }
+
+@media screen and (max-height: 450px) {
+  body[platform-name='ios'] panel-container::part(scrollable) {
+    overflow-y: hidden;
+  }
+}
